Bug 1628762 - Fix tree column header color to follow theme. r=geckoview-reviewers,snorp
The background color for the tree column headers is drawn using the
system APIs, but the foreground uses custom colors, which didn't follow
theme.  This can lead to unreadable text with specific colors, e.g.
leading to black on black.

Fix this by using system colors for the foreground as well.  It also
adds on-hover styling to match possible background change on hover.

Differential Revision: https://phabricator.services.mozilla.com/D78073

UltraBlame original commit: 8ec34ae7484d1a1039cdc72e6173e9a3788bc7f4

--- a/toolkit/themes/shared/tree.inc.css
+++ b/toolkit/themes/shared/tree.inc.css
@@ -867,12 +867,27 @@ color
 -
 moz
 -
-DialogText
+ColHeaderText
 ;
 padding
 :
 0
 4px
+;
+}
+treecol
+:
+hover
+treecolpicker
+:
+hover
+{
+color
+:
+-
+moz
+-
+ColHeaderHoverText
 ;
 }
 .
